--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
 
+    <div class="navbar-container">
+        <div class="logo-container">
+
+        </div>
+        <div class="search-container">
+            <div class="search-bar">
+                <button id="search-button"><img src="./icons/search-magnifying-glass-white-icon (1).svg" id="search-icon" alt="search"></button>
+                <input type="text" id="user-input" placeholder="type here">
+            </div>
+            <div class="options">
+
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
