added options and changed styling

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     <div class="navbar-container">
         <div class="logo-container">
-
+            <img src="C:\Users\danie\Desktop\code\test\vessels-dashboard\assets\mariv-logo-dark.png" alt="logo picture" id="logo-picture">
         </div>
         <div class="search-container">
             <div class="search-bar">
@@ -18,7 +18,18 @@
                 <input type="text" id="user-input" placeholder="type here">
             </div>
             <div class="options">
-
+                <div class="placeholder1">
+                    <p>placeholder 1</p>
+                </div>
+                <div class="placeholder2">
+                    <p>placeholder 2</p>
+                </div>
+                <div class="placeholder3">
+                    <p>placeholder 3</p>
+                </div>
+                <div class="placeholder4">
+                    <p>placeholder 4</p>
+                </div>
             </div>
         </div>
     </div>
