--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="hero.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,7 +21,12 @@
             <div class="options">
 
             </div>
+            
         </div>
+        
+    </div>
+    <div class="hero-container">
+        <img id="map-background" src="C:\Users\Afro_\Desktop\middleProject\assets\mapbackground.png" alt="">
     </div>
 
     <script src="script.js"></script>
