added hero and footer section, added details to main css and html

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <div class="navbar-container">
         <div class="logo-container">
-            <img src="C:\Users\danie\Desktop\code\test\vessels-dashboard\assets\mariv-logo-dark.png" alt="logo picture" id="logo-picture">
+            <img src="../assets/mariv-logo-dark.png" alt="logo picture" id="logo-picture">
         </div>
         <div class="search-container">
             <div class="search-bar">
@@ -38,6 +38,9 @@
     </div>
     <div class="hero-container">
         <img id="map-background" src="C:\Users\Afro_\Desktop\middleProject\assets\mapbackground.png" alt="">
+    </div>
+    <div class="footer-container">
+
     </div>
 
     <script src="script.js"></script>
