--- a/src/ship1.html
+++ b/src/ship1.html
@@ -4,16 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="details.css">
+    <link rel="stylesheet" href="ship1.css">
     <title>ship1 </title>
 </head>
 
 <body>
     <div class="navbar-container">
         <div class="logo-container">
-            <a href="home.html" class="logo-container">
-                <img src="../assets/mariv-logo-dark.png" alt="logo picture" id="logo-picture">
-            </a>
+            <img src="../assets/mariv-logo-dark.png" alt="logo picture" id="logo-picture">
         </div>
         <div class="search-container">
             <div class="search-bar">
@@ -44,12 +42,9 @@
         <div class="result-container"></div>
         <div class="dashboard-container">
             <h3>vessel dashboard</h3>
-            <div class="written-details">
-                <div class="vessel-name"><p id="vesselName"></p></div>
-                <div class="current-location"><p id="currentLocation"></p></div>
-                <div class="knots"><p id="knotSpeed"></p></div>
-            </div>
-            <div class="map-container">s</div>
+            <div class="vessel-name">vessel name</div>
+            <div class="current-location">current location</div>
+            <div class="knots">knots</div>
         </div>
 
     </div>
