--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,17 @@
     <link rel="stylesheet" href="hero.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <div class="navbar-container">
         <div class="logo-container">
-            <img src="../assets/mariv-logo-dark.png" alt="logo picture" id="logo-picture">
+            <img src="C:\Users\danie\Desktop\code\test\vessels-dashboard\assets\mariv-logo-dark.png" alt="logo picture" id="logo-picture">
         </div>
         <div class="search-container">
             <div class="search-bar">
-                <button id="search-button"><img src="./icons/search-magnifying-glass-white-icon (1).svg" id="search-icon" alt="search"></button>
+                <button id="search-button"><img src="./icons/search-magnifying-glass-white-icon (1).svg"
+                        id="search-icon" alt="search"></button>
                 <input type="text" id="user-input" placeholder="type here">
             </div>
             <div class="options">
@@ -45,4 +48,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
