made changes to filter-options

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                     <ul id="filter-by-id">
 
                     </ul>
-                    <p>placeholder 1</p>
+                    <!-- <p>placeholder 1</p> -->
                 </div>
                 <div class="placeholder2">
                     <p>placeholder 2</p>
