made a filter popup

--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,40 @@
                 <button id="search-button"><img src="./icons/search-magnifying-glass-white-icon (1).svg"
                         id="search-icon" alt="search"></button>
                 <input type="text" id="user-input" name="user-input" placeholder="type here">
-            </div>
-            <div class="options">
                 <div class="placeholder1">
+                    <label class="popup">
+                        <input type="checkbox">
+                        <div class="burger" tabindex="0">
+                          <span></span>
+                          <span></span>
+                          <span></span>
+                        </div>
+                        <nav class="popup-window">
                     <ul id="filter-by-id">
 
                     </ul>
+                </nav>
+            </label>
                     <!-- <p>placeholder 1</p> -->
                 </div>
+            </div>
+            <div class="options">
+                <div class="placeholder1">
+                    <label class="popup">
+                        <input type="checkbox">
+                        <!-- <div class="burger" tabindex="0">
+                          <span></span>
+                          <span></span>
+                          <span></span>
+                        </div>
+                        <nav class="popup-window">
+                    <ul id="filter-by-id">
+
+                    </ul>
+                </nav>
+            </label>
+                    <!-- <p>placeholder 1</p> -->
+                </div> -->
                 <div class="placeholder2">
                     <p>placeholder 2</p>
                 </div>
