added bold style to details header and added more details button

--- a/src/index.html
+++ b/src/index.html
@@ -54,15 +54,15 @@
             <h3>vessel dashboard</h3>
             <div class="written-details">
                 <div class="vessel-name">
-                    <p id="vesselNameKey"></p>
+                    <p id="vesselNameKey" class="details-header"></p>
                     <p id="vesselName"></p>
                 </div>
                 <div class="current-location">
-                    <p id="currentLocationKey"></p>
+                    <p id="currentLocationKey" class="details-header"></p>
                     <p id="currentLocation"></p>
                 </div>
                 <div class="captain-Name">
-                    <p id="captainsNameKey"></p>
+                    <p id="captainsNameKey" class="details-header"></p>
                     <p id="captainsName"></p>
                 </div>
 
