--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,28 @@
 </head>
 
 <body>
-    <div class="navbar-container">
-        <div class="logo-container">
-            <img src="../assets/mariv-logo-dark.png" alt="logo picture" id="logo-picture">
-        </div>
-        <div class="search-container">
-            <div class="search-bar">
-                <button id="search-button"><img src="./icons/search-magnifying-glass-white-icon (1).svg"
-                        id="search-icon" alt="search"></button>
-                <input type="text" id="user-input" name="user-input" placeholder="type here">
+    <nav class="navbar-container">
+        <div class="navbar-left">
+            <div class="logo">
+                <img src="../assets/marvis-logo.webp" alt="logo picture" id="logo-img">
+                <span>MariVis</span>
             </div>
-            <div class="options">
-                <div class="placeholder1">
-                    <ul id="filter-by-id">
+        </div>
+        <div class="navbar-center">
+            <input type="text" id="user-input" name="user-input" placeholder="type here">
+            <div class="filter-btn">
+                <ul class="filter-by-id">
+                    Filter
+                </ul>
+            </div>
+        </div>
+        <div class="navbar-right">
+            <div class="profile-icon"></div>
+             <!-- <img src="profile-icon.png" alt="Profile" class="profile-icon"> -->
+        </div>
+    </nav>
 
-                    </ul>
-                    <p>placeholder 1</p>
-                </div>
-                <div class="placeholder2">
-                    <p>placeholder 2</p>
-                </div>
-                <div class="placeholder3">
-                    <p>placeholder 3</p>
-                </div>
-                <div class="placeholder4">
-                    <p>placeholder 4</p>
-                </div>
-            </div>
-            
-        </div>
-        
-    </div>
+
     <div class="ship-content">
         <div class="result-container">
             <ul id="search-results-ul">
