--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,21 @@
         <div class="dashboard-container">
             <h3>vessel dashboard</h3>
             <div class="written-details">
-                <div class="vessel-name"><p id="vesselName"></p></div>
-                <div class="current-location"><p id="currentLocation"></p></div>
-                <div class="knots"><p id="knotSpeed"></p></div>
+                <div class="vessel-name">
+                    <p id="vesselNameKey" class="details-header"></p>
+                    <p id="vesselName"></p>
+                </div>
+                <div class="current-location">
+                    <p id="currentLocationKey" class="details-header"></p>
+                    <p id="currentLocation"></p>
+                </div>
+                <div class="captain-Name">
+                    <p id="captainsNameKey" class="details-header"></p>
+                    <p id="captainsName"></p>
+                </div>
+
+                <button id="openPopup">More Details</button>
+
             </div>
             <div class="map-container">s</div>
         </div>
