--- a/src/index.html
+++ b/src/index.html
@@ -44,15 +44,15 @@
         <div class="dashboard-container">
             <h3>vessel dashboard</h3>
             <div class="written-details">
-                <div class="vessel-name">
+                <div class="vessel-card">
                     <p id="vesselNameKey" class="details-header"></p>
                     <p id="vesselName"></p>
                 </div>
-                <div class="current-location">
+                <div class="vessel-card">
                     <p id="currentLocationKey" class="details-header"></p>
                     <p id="currentLocation"></p>
                 </div>
-                <div class="captain-Name">
+                <div class="vessel-card">
                     <p id="captainsNameKey" class="details-header"></p>
                     <p id="captainsName"></p>
                 </div>
