--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                     <p id="captainsName"></p>
                 </div>
 
-                <button id="openPopup">More Details</button>
+                <button id="more-details-btn">More Details</button>
 
             </div>
             <div class="map-container">s</div>
