--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar-container">
         <div class="navbar-left">
             <div class="logo">
-                <img src="../assets/marvis-logo.webp" alt="logo picture" id="logo-img">
+                <img src="../assets/mariv-logo-dark.png" alt="logo picture" id="logo-img">
                 <span>MariVis</span>
             </div>
         </div>
