Pushing new styling

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,7 @@
         <div class="navbar-center">
             <input type="text" id="user-input" name="user-input" placeholder="type here">
             <div class="filter-btn">
-                <ul class="filter-by-id">
-                    Filter
+                <ul id="filter-by-id">
                 </ul>
             </div>
         </div>
@@ -42,11 +41,11 @@
             </ul>
         </div>
         <div class="dashboard-container">
-            <h3>vessel dashboard</h3>
+            <h3>Dashboard</h3>
             <div class="written-details">
                 <div class="vessel-card">
                     <p id="vesselNameKey" class="details-header"></p>
-                    <p id="vesselName"></p>
+                    <p id="vesselName" class="details-son"></p>
                 </div>
                 <div class="vessel-card">
                     <p id="currentLocationKey" class="details-header"></p>
