--- a/src/index.html
+++ b/src/index.html
@@ -26,18 +26,12 @@
                 <div class="placeholder1">
                     <label class="popup">
                         <input type="checkbox">
-                        <div class="burger" tabindex="0">
-                          <span></span>
-                          <span></span>
-                          <span></span>
-                        </div>
+                        <button class="popup-button">Filter</button>
                         <nav class="popup-window">
-                    <ul id="filter-by-id">
-
-                    </ul>
-                </nav>
-            </label>
-                    <!-- <p>placeholder 1</p> -->
+                            <ul id="filter-by-id">
+                            </ul>
+                        </nav>
+                    </label>
                 </div>
             </div>
             <div class="options">
