--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="details.css">
 
     <title>MariVis</title>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGVuWf1oTD7R3m91wRkQV8gqGueSmyPDg&v=weekly&libraries=marker&loading=async" ></script>
     <script src="../data/data.js"></script>
     <script src="script.js" defer></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGVuWf1oTD7R3m91wRkQV8gqGueSmyPDg&v=weekly&libraries=marker&loading=async" ></script> <!-- Include Google Maps API -->
 
 </head>
 
@@ -49,26 +49,7 @@
             <ul id="search-results-ul">
             </ul>
         </div>
-        <div class="dashboard-container">
-            <h3>Dashboard</h3>
-            <div class="written-details">
-                <div class="vessel-card">
-                    <p id="vesselNameKey" class="details-header"></p>
-                    <p id="vesselName" class="details-son"></p>
-                </div>
-                <div class="vessel-card">
-                    <p id="currentLocationKey" class="details-header"></p>
-                    <p id="currentLocation"></p>
-                </div>
-                <div class="vessel-card">
-                    <p id="captainsNameKey" class="details-header"></p>
-                    <p id="captainsName"></p>
-                </div>
-
-                <button id="more-details-btn">More Details</button>
-
-            </div>
-            <div id="map-container"></div>
+        <div id="dashboard-container" class="dashboard-container">
         </div>
     </div>
     <div class="footer-container">
