finished with contact page

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
                     <a href="">
                         <h6>About</h6>
                     </a>
-                    <a href="">
+                    <a href="./contact.html">
                         <h6>Contact</h6>
                     </a>
                 </div>
