--- a/src/contact.html
+++ b/src/contact.html
@@ -35,15 +35,14 @@
     <div class="form-container">
         <form class="form">
             <p class="title">Contact Us </p>
-            <p class="message">Signup now and get full access to our app. </p>
             <div class="flex">
                 <label>
-                    <input required="" placeholder="" type="text" class="input">
+                    <input required="" placeholder="" type="text" class="input" id="first-name">
                     <span>Firstname</span>
                 </label>
 
                 <label>
-                    <input required="" placeholder="" type="text" class="input">
+                    <input required="" placeholder="" type="text" class="input" id="Last-name">
                     <span>Lastname</span>
                 </label>
             </div>
@@ -83,7 +82,7 @@
             </div>
             <div class="content">
                 <div class="innerLinks">
-                    <a href="">
+                    <a href="./index.html">
                         <h6>Home</h6>
                     </a>
                     <a href="">
