--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <title>MariVis</title>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGVuWf1oTD7R3m91wRkQV8gqGueSmyPDg&v=weekly&libraries=marker&loading=async" ></script>
     <script src="../data/data.js"></script>
-    <script src="script.js" defer></script>
+    <script src="script.js" async defer></script>
 
 </head>
 
