added when pressed on logo it goes to home page

--- a/src/contact.html
+++ b/src/contact.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar-container">
         <div class="navbar-left">
-            <span>MariVis</span>
+            <a href="./index.html" id="logo-link-to-home"><span>MariVis</span></a>
         </div>
         <div class="navbar-right">
             <div class="profile-icon"></div>
