fixed about us page.

--- a/src/about.html
+++ b/src/about.html
@@ -43,9 +43,7 @@
     <div class="ship-content">
   
         <div id="dashboard-container" class="dashboard-container">
-            <img class="logopic" src="../assets/mariv-logo.png" alt="MariVis">
-            <h1>About MariVis</h1>
-            <p>Welcome to MariVis, the professional solution for real-time maritime logistics and fleet management. Designed for companies requiring precise oversight, MariVis provides comprehensive data on vessels, including ship names, serial numbers, types, captains, years built, capacities, and exact locations. With our cutting-edge technology, businesses can efficiently monitor their fleets, optimize logistics, and ensure seamless maritime operations.</p>
+            <img class="logopic" src="../assets/mariv-logo.png" alt="MariVis"><p class="about-text">Welcome to MariVis, the professional solution for real-time maritime logistics and fleet management.<br> Designed for companies requiring precise oversight, MariVis provides comprehensive data on vessels, including ship names, serial numbers, types, captains, years built, capacities, and exact locations. <br> With our cutting-edge technology, businesses can efficiently monitor their fleets, optimize logistics, and ensure seamless maritime operations.</p>
         </div>
     </div>
     <div class="footer-container">
