--- a/src/contact.html
+++ b/src/contact.html
@@ -71,10 +71,10 @@
                     <a href="./index.html">
                         <h6>Home</h6>
                     </a>
-                    <a href="">
+                    <a href="about.html">
                         <h6>About</h6>
                     </a>
-                    <a href="">
+                    <a href="contact.html">
                         <h6>Contact</h6>
                     </a>
                 </div>
