--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                     <a href="">
                         <h6>Home</h6>
                     </a>
-                    <a href="about.html">
+                    <a href="./about.html">
                         <h6>About</h6>
                     </a>
                     <a href="./contact.html">
