--- a/src/about.html
+++ b/src/about.html
@@ -73,7 +73,7 @@
                     <a href="about.html">
                         <h6>About</h6>
                     </a>
-                    <a href="">
+                    <a href="contact.html">
                         <h6>Contact</h6>
                     </a>
                 </div>
