--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="details.css">
 
     <title>MariVis</title>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGVuWf1oTD7R3m91wRkQV8gqGueSmyPDg&v=weekly&libraries=marker&loading=async" ></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=&v=weekly&libraries=marker&loading=async" ></script>
     <script src="../data/data.js"></script>
     <script src="script.js" async defer></script>
 
